[BE-3] feat: добавлена статистика сотрудника для админа
